--- a/test/results/expected/cases/movie-crud.yaml
+++ b/test/results/expected/cases/movie-crud.yaml
@@ -1,7 +1,7 @@
 add new movie:
   createMovie:
     request:
-      url: '${baseUrl}/movies'
+      url: ${baseUrl}/movies
       method: POST
       headers:
         Accept: application/json
@@ -48,7 +48,7 @@ add new movie:
         message: Created
       headers:
         content-type: application/json${~.*}  # charset is optional (regex)
-        location: '${baseUrl}/movies/${~[0-9a-f]+}' # id is unknown but should be hex digits
+        location: ${baseUrl}/movies/${~[0-9a-f]+} # id is unknown but should be hex digits
       body: |-
         {
           "credits": [
@@ -90,7 +90,7 @@ add new movie:
 update rating:
   updateMovie:
     request:
-      url: '${baseUrl}/movies/${id}'
+      url: ${baseUrl}/movies/${id}
       method: PATCH
       headers:
         Accept: application/json
@@ -114,7 +114,7 @@ update rating:
         }
   retrieveMovie:
     request:
-      url: '${baseUrl}/movies/${id}'
+      url: ${baseUrl}/movies/${id}
       method: GET
       headers:
         Accept: application/json
@@ -166,7 +166,7 @@ update rating:
 remove movie:
   deleteMovie:
     request:
-      url: '${baseUrl}/movies/${id}'
+      url: ${baseUrl}/movies/${id}
       method: DELETE
       headers:
         Accept: application/json
@@ -185,7 +185,7 @@ remove movie:
         }
   retrieveMovie:
     request:
-      url: '${baseUrl}/movies/${id}'
+      url: ${baseUrl}/movies/${id}
       method: GET
       headers:
         Accept: application/json
