--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ply-demo",
-  "version": "1.1.1",
+  "version": "2.0.0-beta.1",
   "description": "Illustrate Ply automated testing",
   "license": "MIT",
   "repository": {
@@ -31,7 +31,6 @@
     "pretest": "npm run start-movies",
     "test": "npm-run-all ply stop-movies --continue-on-error"
   },
-  "dependencies": {},
   "devDependencies": {
     "@types/chai": "^4.2.12",
     "@types/node": "^13.13.15",
@@ -40,7 +39,7 @@
     "chai": "^4.2.0",
     "eslint": "^7.10.0",
     "npm-run-all": "^4.1.5",
-    "ply-ct": "^2.2.11",
+    "ply-ct": "^3.0.0-beta.1",
     "ply-movies": "^1.1.2",
     "run-script-os": "^1.1.1",
     "typescript": "^4.1.2"
