--- a/test/requests/github-api.ply.yaml
+++ b/test/requests/github-api.ply.yaml
@@ -1,13 +1,13 @@
 # REST API
 repositoryTopics:
-  url: 'https://api.github.com/repos/${github.organization}/${github.repository}/topics'
+  url: https://api.github.com/repos/${github.organization}/${github.repository}/topics
   method: GET
   headers:
     Accept: application/vnd.github.mercy-preview+json
 
 # GraphQL query
 repositoryTopicsQuery:
-  url: 'https://api.github.com/graphql'
+  url: https://api.github.com/graphql
   method: POST
   headers:
     Authorization: Bearer ${githubToken}
@@ -29,7 +29,7 @@ repositoryTopicsQuery:
     }
 
 findRepositoryId:
-  url: 'https://api.github.com/graphql'
+  url: https://api.github.com/graphql
   method: POST
   headers:
     Authorization: Bearer ${githubToken}
@@ -43,7 +43,7 @@ findRepositoryId:
     }
 
 starRepository:
-  url: 'https://api.github.com/graphql'
+  url: https://api.github.com/graphql
   method: POST
   headers:
     Authorization: Bearer ${githubToken}
