--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ply-demo",
-  "version": "2.0.0-beta.3",
+  "version": "2.0.1",
   "description": "Illustrate Ply automated testing",
   "license": "MIT",
   "repository": {
@@ -32,16 +32,16 @@
     "test": "npm-run-all ply stop-movies --continue-on-error"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.12",
+    "@types/chai": "^4.2.8",
     "@types/node": "^13.13.15",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
-    "chai": "^4.2.0",
-    "eslint": "^7.10.0",
+    "chai": "^4.3.4",
+    "eslint": "^7.27.0",
     "npm-run-all": "^4.1.5",
-    "ply-ct": "^3.0.0-beta.3",
+    "ply-ct": "^3.0.3",
     "ply-movies": "^1.1.2",
-    "run-script-os": "^1.1.1",
-    "typescript": "^4.1.2"
+    "run-script-os": "^1.1.6",
+    "typescript": "^4.2.4"
   }
 }
