--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ply-demo",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "description": "Illustrate Ply automated testing",
   "license": "MIT",
   "repository": {
@@ -39,9 +39,12 @@
     "chai": "^4.3.4",
     "eslint": "^7.27.0",
     "npm-run-all": "^4.1.5",
-    "ply-ct": "^3.0.3",
+    "ply-ct": "^3.0.7-beta.1",
     "ply-movies": "^1.1.4",
     "run-script-os": "^1.1.6",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "yargs": "^16.2.0"
   }
 }
