--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ply-demo",
-  "version": "3.0.1",
+  "name": "@ply-ct/ply-demo",
+  "version": "3.0.16",
   "description": "Illustrate Ply automated testing",
   "license": "MIT",
   "repository": {
@@ -32,6 +32,8 @@
     "test": "npm-run-all ply stop-movies --continue-on-error"
   },
   "devDependencies": {
+    "@ply-ct/ply": "^3.0.16",
+    "@ply-ct/ply-movies": "^1.1.8",
     "@types/chai": "^4.2.8",
     "@types/node": "^13.13.15",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
@@ -39,8 +41,6 @@
     "chai": "^4.3.4",
     "eslint": "^7.27.0",
     "npm-run-all": "^4.1.5",
-    "ply-ct": "^3.0.11",
-    "ply-movies": "^1.1.7",
     "run-script-os": "^1.1.6",
     "typescript": "^4.3.5"
   },
