--- a/plyconfig.json
+++ b/plyconfig.json
@@ -3,7 +3,7 @@
   "skip": "requests/movies-api.ply.yaml",
   "valuesFiles": [
     "test/values/global.json",
-    "test/values/localhost.json"
+    "test/values/ply-ct.json"
   ],
   "outputFile": "test/results/actual/ply-results.json"
 }
