--- a/test/results/expected/Postman Echo/Auth- Digest.yaml
+++ b/test/results/expected/Postman Echo/Auth- Digest.yaml
@@ -1,6 +1,6 @@
 DigestAuth Request:
   request:
-    url: 'https://postman-echo.com/digest-auth'
+    url: https://postman-echo.com/digest-auth
     method: GET
     headers: {}
   response:
@@ -8,5 +8,5 @@ DigestAuth Request:
       code: 401
       message: Unauthorized
     headers:
-      www-authenticate: 'Digest realm="Users", nonce="${~.*}", qop="auth"'
+      www-authenticate: Digest realm="Users", nonce="${~.*}", qop="auth"
     body: Unauthorized
