--- a/test/results/expected/Postman Echo/Headers.yaml
+++ b/test/results/expected/Postman Echo/Headers.yaml
@@ -1,6 +1,6 @@
 Request Headers:
   request:
-    url: 'https://postman-echo.com/headers'
+    url: https://postman-echo.com/headers
     method: GET
     headers:
       my-sample-header: Lorem ipsum dolor sit amet
@@ -25,7 +25,7 @@ Request Headers:
       }
 Response Headers:
   request:
-    url: 'https://postman-echo.com/response-headers?foo1=bar1&foo2=bar2'
+    url: https://postman-echo.com/response-headers?foo1=bar1&foo2=bar2
     method: GET
     headers: {}
   response:
