--- a/plyconfig.yaml
+++ b/plyconfig.yaml
@@ -1,7 +1,7 @@
 testsLocation: test
 
 # movies-api.ply.yaml is for programmatic cases
-skip: requests/movies-api.ply.yaml
+skip: '{requests/movies-api.ply.yaml,requests/form-data.ply}'
 
 valuesFiles:
   - test/values/global.json
