--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "stop-movies:windows": "ply-movies stop -p %npm_package_config_port%",
     "ply": "ply",
     "pretest": "npm run start-movies",
-    "test": "npm-run-all ply stop-movies --continue-on-error"
+    "test": "npm-run-all ply stop-movies --continue-on-error",
+    "load-test-sequential": "ply flows/movies-api.ply.flow --valuesFiles=\"test/values/localhost.json,test/values/forties-movies.xlsx\"",
+    "load-test-parallel": "ply flows/movies-api.ply.flow --valuesFiles=\"test/values/localhost.json,test/values/forties-movies.csv\" --submit --parallel"
   },
   "devDependencies": {
     "@ply-ct/ply": "^3.0.31",
