--- a/test/results/expected/Postman Echo/Utilities.yaml
+++ b/test/results/expected/Postman Echo/Utilities.yaml
@@ -34,8 +34,8 @@ Streamed Response:
           "x-forwarded-port": "443",
           "host": "postman-echo.com",
           "x-amzn-trace-id": "${~.*}",
+          "user-agent": "Ply-CT/${~.*}",
           "accept": "*/*",
-          "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
           "accept-encoding": "gzip,deflate"
         },
         "url": "https://postman-echo.com/stream/5"
@@ -48,8 +48,8 @@ Streamed Response:
           "x-forwarded-port": "443",
           "host": "postman-echo.com",
           "x-amzn-trace-id": "${~.*}",
+          "user-agent": "Ply-CT/${~.*}",
           "accept": "*/*",
-          "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
           "accept-encoding": "gzip,deflate"
         },
         "url": "https://postman-echo.com/stream/5"
@@ -62,8 +62,8 @@ Streamed Response:
           "x-forwarded-port": "443",
           "host": "postman-echo.com",
           "x-amzn-trace-id": "${~.*}",
+          "user-agent": "Ply-CT/${~.*}",
           "accept": "*/*",
-          "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
           "accept-encoding": "gzip,deflate"
         },
         "url": "https://postman-echo.com/stream/5"
@@ -76,8 +76,8 @@ Streamed Response:
           "x-forwarded-port": "443",
           "host": "postman-echo.com",
           "x-amzn-trace-id": "${~.*}",
+          "user-agent": "Ply-CT/${~.*}",
           "accept": "*/*",
-          "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
           "accept-encoding": "gzip,deflate"
         },
         "url": "https://postman-echo.com/stream/5"
@@ -90,8 +90,8 @@ Streamed Response:
           "x-forwarded-port": "443",
           "host": "postman-echo.com",
           "x-amzn-trace-id": "${~.*}",
+          "user-agent": "Ply-CT/${~.*}",
           "accept": "*/*",
-          "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
           "accept-encoding": "gzip,deflate"
         },
         "url": "https://postman-echo.com/stream/5"
@@ -370,7 +370,7 @@ GZip Compressed Response:
           "accept": "*/*",
           "accept-encoding": "gzip,deflate",
           "host": "postman-echo.com",
-          "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
+          "user-agent": "Ply-CT/${~.*}",
           "x-amzn-trace-id": "${~.*}",
           "x-forwarded-port": "443",
           "x-forwarded-proto": "https"
@@ -396,7 +396,7 @@ Deflate Compressed Response:
           "accept": "*/*",
           "accept-encoding": "gzip,deflate",
           "host": "postman-echo.com",
-          "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
+          "user-agent": "Ply-CT/${~.*}",
           "x-amzn-trace-id": "${~.*}",
           "x-forwarded-port": "443",
           "x-forwarded-proto": "https"
