--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ply-ct/ply-demo",
-  "version": "3.0.32",
+  "version": "3.0.33",
   "description": "Illustrate Ply automated testing",
   "license": "MIT",
   "repository": {
@@ -30,11 +30,11 @@
     "ply": "ply",
     "pretest": "npm run start-movies",
     "test": "npm-run-all ply stop-movies --continue-on-error",
-    "load-test-sequential": "ply flows/movies-api.ply.flow --valuesFiles=\"test/values/localhost.json,test/values/forties-movies-3.csv\" --reporter=html",
+    "load-test-sequential": "ply flows/movies-api.ply.flow --valuesFiles=\"test/values/localhost.json,test/values/forties-movies-3.csv\" --reporter=json",
     "load-test-parallel": "ply flows/movies-api.ply.flow --valuesFiles=\"test/values/localhost.json,test/values/forties-movies.csv\" --submit --parallel"
   },
   "devDependencies": {
-    "@ply-ct/ply": "^3.0.32",
+    "@ply-ct/ply": "^3.0.33",
     "@ply-ct/ply-movies": "^1.1.9",
     "@types/chai": "^4.3.0",
     "@types/node": "^17.0.8",
