--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "diffEditor.codeLens": true
+    "diffEditor.codeLens": true,
+    "ply.plyPath": "node_modules/@ply-ct/ply",
+    "ply.customSteps": "custom/steps/**/*.json"
 }
